# noisy_bevy

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
assets/: noisy_bevy.wgsl  simple_noise_prelude.wgsl
assets/examples/: asteroid_background.wgsl  domain_warping.wgsl  worley.wgsl  worley_background.wgsl
examples/: README.md  asteroids.rs  basic.rs  domain_warping.rs  domain_warping_cpu.rs  domain_warping_shader.rs  worley.rs  worley_shader.rs
src/: cpu.rs  gpu.rs  lib.rs
src/snapshots/: noisy_bevy__cpu__test__fbm_2d_seeded_values_unchanged-2.snap  noisy_bevy__cpu__test__fbm_2d_seeded_values_unchanged.snap  noisy_bevy__cpu__test__fbm_2d_values_unchanged.snap  noisy_bevy__cpu__test__fbm_2d_warp_seeded_values_unchanged.snap  noisy_bevy__cpu__test__fbm_3d_seeded_values_unchanged.snap  noisy_bevy__cpu__test__fbm_3d_values_unchanged.snap  noisy_bevy__cpu__test__simplex_2d_seeded_values_unchanged-2.snap  noisy_bevy__cpu__test__simplex_2d_seeded_values_unchanged.snap  noisy_bevy__cpu__test__simplex_2d_values_unchanged.snap  noisy_bevy__cpu__test__simplex_3d_seeded_values_unchanged.snap  noisy_bevy__cpu__test__simplex_3d_values_unchanged.snap  noisy_bevy__cpu__test__worley_2d_values_unchanged.snap  noisy_bevy__test__fbm_2d_seeded_values_unchanged-2.snap  noisy_bevy__test__fbm_2d_seeded_values_unchanged.snap  noisy_bevy__test__fbm_2d_values_unchanged.snap  noisy_bevy__test__fbm_2d_warp_seeded_values_unchanged.snap  noisy_bevy__test__fbm_3d_seeded_values_unchanged.snap  noisy_bevy__test__fbm_3d_values_unchanged.snap  noisy_bevy__test__simplex_2d_seeded_values_unchanged-2.snap  noisy_bevy__test__simplex_2d_seeded_values_unchanged.snap  noisy_bevy__test__simplex_2d_values_unchanged.snap  noisy_bevy__test__simplex_3d_seeded_values_unchanged.snap  noisy_bevy__test__simplex_3d_values_unchanged.snap  noisy_bevy__test__worley_2d_values_unchanged.snap
