[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Procedural noise primitives for Bevy"
edition = "2024"
keywords = ["gamedev", "bevy", "noise", "pcg", "simplex_noise"]
license = "MIT"
name = "noisy_bevy"
repository = "https://github.com/johanhelsing/noisy_bevy"
version = "0.10.1"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
] }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_sprite",
    "bevy_winit",
    "x11",         # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
rand = "0.9"
bevy_pancam = { version = "0.18", features = ["bevy_egui"] }
bevy_egui = { version = "0.31", default-features = false, features = [
    "default_fonts",
] }
insta = "1.21"
