[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Procedural noise primitives for Bevy"
edition = "2024"
keywords = ["gamedev", "bevy", "noise", "pcg", "simplex_noise"]
license = "MIT"
name = "noisy_bevy"
repository = "https://github.com/johanhelsing/noisy_bevy"
version = "0.13.0"

[dependencies]
bevy_asset = { version = "0.18", default-features = false, optional = true }
bevy_shader = { version = "0.18", default-features = false, optional = true }
bevy_app = { version = "0.18", default-features = false, optional = true }
glam = { version = "0.30", default-features = false, features = ["bytemuck"], optional = true }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_sprite_render",
    "bevy_window",
    "bevy_winit",
    "x11",         # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
rand = "0.9"
bevy_pancam = { version = "0.20", features = ["bevy_egui_0_39"] }
bevy_egui = { version = "0.39", default-features = false, features = [
    "default_fonts",
] }
insta = "1.21"

[features]
default = [
    "gpu",
    "cpu",
]

gpu = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "dep:bevy_shader",
]

cpu = [
    "dep:glam",
]

