[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Procedural noise primitives for Bevy"
edition = "2024"
keywords = ["gamedev", "bevy", "noise", "pcg", "simplex_noise"]
license = "MIT"
name = "noisy_bevy"
repository = "https://github.com/johanhelsing/noisy_bevy"
version = "0.14.0"

[dependencies]
bevy = { version = "0.19", default-features = false }

[dev-dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "bevy_sprite_render",
    "bevy_window",
    "bevy_winit",
    "x11",         # github actions runners don't have libxkbcommon installed, so can't use wayland
] }
rand = "0.9"
bevy_pancam = { version = "0.21", features = ["bevy_egui_0_40"] }
insta = "1.21"

[features]
default = [
    "gpu",
    "cpu",
]

gpu = [
    "bevy/bevy_asset",
    "bevy/bevy_shader",
]

cpu = []

